--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This Site is created by Nav..., It uses data from Mapbox.com and darksky.net</p>
             <img src="./img/img1.jpg" class="portrait">
         </div>
         {{>footer}}
